# taxi_calculator

./: .gitignore  .pre-commit-config.yaml  .prettierignore  CONTRIBUTING.md  README.md  SECURITY.md  app.py  pyproject.toml  requirements.txt
static/css/: style.css
static/js/: main.js
templates/: index.html
